# nocturnal-flight-call-resources

./: LICENSE  NFC-acoustic-environment-forecast-fixed-v44.html  README.md
docs/: equipment.md  protocols.md  software.md
equipment/: recorders-and-microphones
references/: Books and Articles  Books and Articles.md  Communities  Communities.md  Guides.md  NFC Recording Repositories  Protocol  Researchers.md
site/: nfc-acoustic-environment.html
software/: Audition 1-hour recordings with break at midnight and enrivonmental conditions.scpt  BACKUP_SOURCE_audition_recording_with_morning_analysis.applescript  Birdcast and other forecasting.md  NFC acoustics quality forecast (HTML).html  NFC acoustics quality forecast (Python)  NFC-acoustic-environment-forecast-fixed-v16.html  forecasting.md  (+4 more)
software/nfc-tools/: .gitignore  CHANGELOG.md  LICENSE  README.md  README_DEV.md  briefcase.toml  pyproject.toml
software/nfc-tools/src/nfc_tools/: __init__.py  app.py  autoschedule.py  config.py  ephemeris.py  ffmpeg_locator.py  filenames.py  installer.py  manifest.py  paths.py  recorder.py  scheduler.py  session.py
software/nfc-tools/src/nfc_tools/analyzers/: base.py
software/nfc-tools/src/nfc_tools/web/: routes_schedule.py
software/nfc-tools/src/nfc_tools/web/static/: detections.js
software/nfc-tools/src/nfc_tools/web/templates/: base.html  dashboard.html  detections.html  wizard.html
software/nfc-tools/tests/: test_config.py  test_detections.py  test_ephemeris.py  test_exporters.py  test_filenames.py  test_scheduler.py
software/nfc-tools/tools/: make_screenshots.py
(+30 files in other folders)
